--- a/class.html
+++ b/class.html
@@ -144,29 +144,30 @@ const assignedStudentIds = new Set();
 
 // Add student to class and persist to backend
 async function addStudentToClass(user, classId) {
-  // POST to backend to assign student to class
   try {
-    const response = await fetch("https://develmets.skiscratcher.com/getClasses", {
+    const response = await fetch("https://develmets.skiscratcher.com/assignStudentToClass", {
       method: "POST",
       headers: { "Content-Type": "application/x-www-form-urlencoded" },
       body: new URLSearchParams({ studentId: user.id, classId: classId }),
       credentials: "include"
     });
+
     if (!response.ok) {
       alert("Failed to assign student to class.");
       return;
     }
-    // Mark student as assigned
+
     assignedStudentIds.add(user.id);
-    // Add to local classroom list
     if (!studentsByClass[classId]) studentsByClass[classId] = [];
     studentsByClass[classId].push({ name: user.displayName, email: user.email, id: user.id });
     renderClassrooms();
     renderUserList();
+
   } catch (err) {
     alert("Error assigning student: " + err);
   }
 }
+
 
 // Fetch assigned students for each class from backend
 async function fetchAssignedStudents() {
