--- a/class.html
+++ b/class.html
@@ -148,7 +148,7 @@ async function addStudentToClass(user, classId) {
     const response = await fetch("https://develmets.skiscratcher.com/assignStudentToClass", {
       method: "POST",
       headers: { "Content-Type": "application/x-www-form-urlencoded" },
-      body: new URLSearchParams({ studentId: user.id, classId: classId }),
+      body: new URLSearchParams({classId: classId  ,studentId: user.id }),
       credentials: "include"
     });
 
