--- a/class.html
+++ b/class.html
@@ -148,7 +148,7 @@ async function addStudentToClass(user, classId) {
     const response = await fetch("https://develmets.skiscratcher.com/assignStudentToClass", {
       method: "POST",
       headers: { "Content-Type": "application/x-www-form-urlencoded" },
-      body: new URLSearchParams({classId: classId  ,studentId: user.id }),
+      body: new URLSearchParams({ studentId: user.id, classId: classId }),
       credentials: "include"
     });
 
@@ -227,12 +227,12 @@ async function renderUserList() {
       addBtn.style.marginRight = "12px";
       addBtn.onclick = function () {
         const sClass = document.getElementById("sClass").value;
-        const classObj = classes.find(cls => cls.className == sClass);
+        const classObj = classes.find(cls => cls.className === sClass);
         if (!classObj) {
           alert("Please select a class first.");
           return;
         }
-        addStudentToClass(user, classObj.classId);
+        addStudentToClass(user, classObj.id);
       };
       row.appendChild(addBtn);
 
