--- a/class.html
+++ b/class.html
@@ -148,7 +148,7 @@ async function addStudentToClass(user, classId) {
     const response = await fetch("https://develmets.skiscratcher.com/assignStudentToClass", {
       method: "POST",
       headers: { "Content-Type": "application/x-www-form-urlencoded" },
-      body: new URLSearchParams({ studentId: user.id, classId: classId }),
+      body: new URLSearchParams({ studentId: user.userid, classId: classId }),
       credentials: "include"
     });
 
@@ -159,7 +159,7 @@ async function addStudentToClass(user, classId) {
 
     assignedStudentIds.add(user.id);
     if (!studentsByClass[classId]) studentsByClass[classId] = [];
-    studentsByClass[classId].push({ name: user.displayName, email: user.email, id: user.id });
+    studentsByClass[classId].push({ name: user.displayName, email: user.email, id: user.userid });
     renderClassrooms();
     renderUserList();
 
@@ -179,9 +179,9 @@ async function fetchAssignedStudents() {
     if (!response.ok) return;
     const assigned = await response.json();
     assigned.forEach(item => {
-      assignedStudentIds.add(item.studentId);
+      assignedStudentIds.add(item.userid);
       if (!studentsByClass[item.classId]) studentsByClass[item.classId] = [];
-      studentsByClass[item.classId].push({ name: item.displayName, email: item.email, id: item.studentId });
+      studentsByClass[item.classId].push({ name: item.displayName, email: item.email, id: item.userid });
     });
   } catch (err) {
     // Ignore errors for now
